--- a/webdav-push.mkd
+++ b/webdav-push.mkd
@@ -42,6 +42,9 @@ normative:
   RFC9111:
 
 informative:
+  RFC3744:
+  RFC4791:
+  RFC6352:
   UnifiedPush:
     title: UnifiedPush
     target: https://unifiedpush.org
