--- a/webdav-push.mkd
+++ b/webdav-push.mkd
@@ -45,6 +45,7 @@ informative:
   RFC3744:
   RFC4791:
   RFC6352:
+  RFC6638:
   UnifiedPush:
     title: UnifiedPush
     target: https://unifiedpush.org
