--- a/webdav-push.mkd
+++ b/webdav-push.mkd
@@ -1,5 +1,5 @@
 ---
-title: Push for WebDAV
+title: Push for WebDAV (WebDAV-Push)
 abbrev: WebDAV-Push
 docname: draft-bitfire-webdav-push-00
 category: exp
